# ximea_camera

./: Cargo.toml  config.toml  readme.md
benches/: frame_processing.rs
examples/: set_lens_mode.rs  test_parameters_settings.rs
src/: camera.rs  cli.rs  error.rs  frames.rs  helpers.rs  lib.rs  logging.rs  main.rs  messages.rs  structs.rs  video_writer.rs
src/camera/: config.rs  control.rs  frame.rs  mod.rs  xiapi_wrapper.rs  ximea.rs
src/cli/: args.rs  mod.rs
src/communication/: message_parser.rs  mod.rs  zmq_client.rs
src/config/: cli.rs  loader.rs  mod.rs
src/error/: error_types.rs  mod.rs
src/frame/: buffer.rs  mod.rs  processor.rs  types.rs
src/messaging/: message_types.rs  mod.rs  types.rs  zmq.rs  zmq_handler.rs
src/processing/: frame_processor.rs  mod.rs  trigger_handler.rs  video_writer.rs
src/types/: mod.rs
src/utils/: config.rs  error.rs  helpers.rs  logging.rs  mod.rs
src/video/: ffmpeg_writer.rs  frame_handler.rs  metadata.rs  mod.rs  saver.rs
src/ximea_camera/: control.rs  mod.rs
