[package]
name = "ximea_camera"
version = "0.1.0"
edition = "2021"
authors = ["Elhanan Buchsbaum"]

[dependencies]
xiapi = "0.1.4"
xiapi-sys = "0.1.2"
crossbeam = "0.8"
crossbeam-channel = "0.5"
image = "0.24.8"
clap = { version = "4.5.15", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
zmq = "0.10.0"
anyhow = "1.0.86"
thiserror = "1.0"
ffmpeg-next = "7.0.4"

[dev-dependencies]
tempfile = "3.12.0"
criterion = "0.5.1"

[[bench]]
name = "frame_processing"
harness = false