[package]
name = "ximea_camera"
version = "0.1.0"
authors = ["Elhanan Buchsbaum <elhananby@gmail.com>"]

[dependencies]
xiapi = { git = "https://github.com/Ximea-GmbH/xiapi.git" }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
zmq = "0.10"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8.19"
thiserror = "1.0"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"

[lib]
name = "ximea_camera"
path = "src/lib.rs"

[[bin]]
name = "ximea_camera"
path = "src/main.rs"
